[gd_scene load_steps=21 format=3 uid="uid://dt6gta8jx2eqv"]

[ext_resource type="PackedScene" uid="uid://dadwop41cfvaq" path="res://scenes/Arena/PlayerArena.tscn" id="1_qvfjg"]
[ext_resource type="Script" uid="uid://cj2qlaendb310" path="res://scripts/Arena/arena.gd" id="1_yrroq"]
[ext_resource type="PackedScene" uid="uid://3da3mjy6s0c" path="res://scenes/Arena/EnemyArena.tscn" id="2_yrroq"]
[ext_resource type="FontFile" uid="uid://cmueu2xsxxnv0" path="res://assets/Fonts/OpenDyslexic-Bold-Italic.otf" id="4_1atjv"]
[ext_resource type="PackedScene" path="res://scenes/Grass_9.tscn" id="4_4qge7"]
[ext_resource type="PackedScene" uid="uid://cbb7hnej2yqx2" path="res://scenes/tree.tscn" id="5_52tid"]
[ext_resource type="Texture2D" uid="uid://ddhciodt3hvod" path="res://assets/UI/Buttons/Button_Blue_3Slides.png" id="5_d5y6o"]
[ext_resource type="Texture2D" uid="uid://bshdoqp7hxylf" path="res://assets/UI/Banners/Banner_Horizontal.png" id="6_d5y6o"]
[ext_resource type="FontFile" uid="uid://bx2ihqwlpgohh" path="res://assets/Fonts/OpenDyslexic-Regular.otf" id="8_02usi"]
[ext_resource type="FontFile" uid="uid://vgguwixfis5" path="res://assets/Fonts/OpenDyslexic-Italic.otf" id="9_06hgp"]
[ext_resource type="PackedScene" uid="uid://bu7s4ux7omub1" path="res://scenes/Small_rocks_4.tscn" id="9_52tid"]
[ext_resource type="FontFile" uid="uid://befte4t1le3r4" path="res://assets/Fonts/OpenDyslexic-Bold-Italic.woff" id="10_iw8d4"]
[ext_resource type="FontFile" uid="uid://b4nefixj2hemt" path="res://assets/Fonts/OpenDyslexic-Bold.otf" id="11_c3m1x"]
[ext_resource type="PackedScene" uid="uid://csgh85pcfkn56" path="res://scenes/CombatEscape.tscn" id="13_06hgp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52tid"]
bg_color = Color(0, 0, 0, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1atjv"]
bg_color = Color(0.984314, 0, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwrlc"]
bg_color = Color(0.223529, 0.870588, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5y6o"]
bg_color = Color(0.811765, 1, 0.0156863, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qge7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8twpt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Arena" type="Node2D"]
script = ExtResource("1_yrroq")

[node name="PlayerArena" parent="." instance=ExtResource("1_qvfjg")]
position = Vector2(274, 285)

[node name="EnemyArena" parent="." instance=ExtResource("2_yrroq")]
position = Vector2(369, 285)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(2, 2)

[node name="Tree" type="Node" parent="."]

[node name="Tree6" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(117, 140)
rotation = -0.0826456
scale = Vector2(0.805, 0.805)

[node name="Tree13" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(20, 289)
scale = Vector2(0.805, 0.805)

[node name="Tree20" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(138, 417)
rotation = 0.0834834
scale = Vector2(0.805, 0.805)

[node name="Tree23" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(590, 122)
rotation = 0.0943913
scale = Vector2(0.805, 0.805)

[node name="Tree25" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(450, 168)
rotation = 0.0414737
scale = Vector2(0.805, 0.805)

[node name="Tree29" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(648, 296)
scale = Vector2(0.805, 0.805)

[node name="Tree31" parent="Tree" instance=ExtResource("5_52tid")]
position = Vector2(276, 45)
scale = Vector2(0.805, 0.805)

[node name="Grass_9" parent="." instance=ExtResource("4_4qge7")]
z_index = -999
position = Vector2(-671, -129)

[node name="Control" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="EnemyHealthBar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 35.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_1atjv")
theme_override_styles/background = SubResource("StyleBoxFlat_52tid")
theme_override_styles/fill = SubResource("StyleBoxFlat_1atjv")
max_value = 4.0
value = 4.0
fill_mode = 1

[node name="Label2" type="Label" parent="Control/EnemyHealthBar"]
z_index = 20
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 73.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("4_1atjv")
text = "Goblin"

[node name="PlayerHealthBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("4_1atjv")
theme_override_styles/background = SubResource("StyleBoxFlat_52tid")
theme_override_styles/fill = SubResource("StyleBoxFlat_dwrlc")
max_value = 4.0
value = 4.0

[node name="Label2" type="Label" parent="Control/PlayerHealthBar"]
z_index = 30
layout_mode = 0
offset_left = 225.0
offset_right = 296.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("4_1atjv")
text = "Player"

[node name="EnemyCooldownCircle" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -130.0
offset_right = 72.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_d5y6o")
max_value = 4.0
step = 1.0
value = 4.0
show_percentage = false

[node name="LabelBG" type="NinePatchRect" parent="Control"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -121.0
offset_right = 313.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("6_d5y6o")
region_rect = Rect2(33.0074, 47.168, 126.098, 122.999)
patch_margin_left = 32
patch_margin_right = 32
axis_stretch_horizontal = 1

[node name="Label" type="RichTextLabel" parent="Control"]
z_index = 11
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.0
offset_top = -16.0
offset_right = 1482.0
offset_bottom = 667.0
grow_horizontal = 2
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0.2, 0.4, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.0646965, 0.0646965, 0.0646965, 0.760784)
theme_override_constants/shadow_offset_y = 7
theme_override_constants/shadow_offset_x = 4
theme_override_fonts/normal_font = ExtResource("8_02usi")
theme_override_fonts/italics_font = ExtResource("9_06hgp")
theme_override_fonts/bold_italics_font = ExtResource("10_iw8d4")
theme_override_fonts/bold_font = ExtResource("11_c3m1x")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 125
bbcode_enabled = true
text = "[b]11222ddsd[/b]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEditBG" type="NinePatchRect" parent="Control"]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 132.0
offset_top = 152.0
offset_right = -137.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("5_d5y6o")
region_rect = Rect2(7, 0, 178, 56)
patch_margin_left = 45
patch_margin_right = 30
axis_stretch_horizontal = 1

[node name="LineEdit" type="LineEdit" parent="Control"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41525
anchor_top = 0.0305556
anchor_right = 2.92619
anchor_bottom = 0.458333
offset_left = -133.76
offset_top = 141.0
offset_right = 134.24
offset_bottom = 177.0
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 3
theme_override_colors/selection_color = Color(0, 0, 0, 0)
theme_override_colors/caret_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_c3m1x")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxFlat_4qge7")
theme_override_styles/normal = SubResource("StyleBoxFlat_8twpt")
alignment = 1
keep_editing_on_text_submit = true
metadata/_edit_use_anchors_ = true

[node name="CombatEscape" parent="Control" instance=ExtResource("13_06hgp")]
process_mode = 2
z_index = 30
layout_mode = 1

[node name="Small_rocks_4" parent="." instance=ExtResource("9_52tid")]
position = Vector2(-398, -390)
